3AC/y.output
Grammar

    0 $accept: lines $end

    1 lines: lines line
    2      | line

    3 line: EXIT
    4     | PRINTLETTER
    5     | expr '\n'
    6     | LETTER '=' expr '\n'
    7     | bexpr '\n'

    8 $@1: %empty

    9 $@2: %empty

   10 line: IF bexpr $@1 THEN expr ELSE $@2 expr '\n'

   11 bexpr: expr MEQUAL expr
   12      | expr GEQUAL expr
   13      | expr '<' expr
   14      | expr '>' expr
   15      | expr EQUAL expr
   16      | expr NOTEQUAL expr
   17      | '(' bexpr ')'
   18      | BOOLEAN

   19 expr: expr '+' expr
   20     | expr '-' expr
   21     | expr '*' expr
   22     | expr '/' expr
   23     | expr '%' expr
   24     | '-' expr
   25     | '(' expr ')'
   26     | INTEGER
   27     | LETTER


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 5 6 7 10
    '%' (37) 23
    '(' (40) 17 25
    ')' (41) 17 25
    '*' (42) 21
    '+' (43) 19
    '-' (45) 20 24
    '/' (47) 22
    '<' (60) 13
    '=' (61) 6
    '>' (62) 14
    error (256)
    INTEGER <number> (258) 26
    LETTER <letter> (259) 6 27
    PRINTLETTER <letter> (260) 4
    BOOLEAN <boolean> (261) 18
    EQUAL (262) 15
    NOTEQUAL (263) 16
    MEQUAL (264) 11
    GEQUAL (265) 12
    IF (266) 10
    THEN (267) 10
    ELSE (268) 10
    EXIT (269) 3


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    lines (27)
        on left: 1 2
        on right: 0 1
    line <produzione> (28)
        on left: 3 4 5 6 7 10
        on right: 1 2
    $@1 (29)
        on left: 8
        on right: 10
    $@2 (30)
        on left: 9
        on right: 10
    bexpr <produzione> (31)
        on left: 11 12 13 14 15 16 17 18
        on right: 7 10 17
    expr <produzione> (32)
        on left: 19 20 21 22 23 24 25 26 27
        on right: 5 6 10 11 12 13 14 15 16 19 20 21 22 23 24 25


State 0

    0 $accept: . lines $end

    INTEGER      shift, and go to state 1
    LETTER       shift, and go to state 2
    PRINTLETTER  shift, and go to state 3
    BOOLEAN      shift, and go to state 4
    IF           shift, and go to state 5
    EXIT         shift, and go to state 6
    '-'          shift, and go to state 7
    '('          shift, and go to state 8

    lines  go to state 9
    line   go to state 10
    bexpr  go to state 11
    expr   go to state 12


State 1

   26 expr: INTEGER .

    $default  reduce using rule 26 (expr)


State 2

    6 line: LETTER . '=' expr '\n'
   27 expr: LETTER .

    '='  shift, and go to state 13

    $default  reduce using rule 27 (expr)


State 3

    4 line: PRINTLETTER .

    $default  reduce using rule 4 (line)


State 4

   18 bexpr: BOOLEAN .

    $default  reduce using rule 18 (bexpr)


State 5

   10 line: IF . bexpr $@1 THEN expr ELSE $@2 expr '\n'

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    BOOLEAN  shift, and go to state 4
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    bexpr  go to state 15
    expr   go to state 16


State 6

    3 line: EXIT .

    $default  reduce using rule 3 (line)


State 7

   24 expr: '-' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 18


State 8

   17 bexpr: '(' . bexpr ')'
   25 expr: '(' . expr ')'

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    BOOLEAN  shift, and go to state 4
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    bexpr  go to state 19
    expr   go to state 20


State 9

    0 $accept: lines . $end
    1 lines: lines . line

    $end         shift, and go to state 21
    INTEGER      shift, and go to state 1
    LETTER       shift, and go to state 2
    PRINTLETTER  shift, and go to state 3
    BOOLEAN      shift, and go to state 4
    IF           shift, and go to state 5
    EXIT         shift, and go to state 6
    '-'          shift, and go to state 7
    '('          shift, and go to state 8

    line   go to state 22
    bexpr  go to state 11
    expr   go to state 12


State 10

    2 lines: line .

    $default  reduce using rule 2 (lines)


State 11

    7 line: bexpr . '\n'

    '\n'  shift, and go to state 23


State 12

    5 line: expr . '\n'
   11 bexpr: expr . MEQUAL expr
   12      | expr . GEQUAL expr
   13      | expr . '<' expr
   14      | expr . '>' expr
   15      | expr . EQUAL expr
   16      | expr . NOTEQUAL expr
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    EQUAL     shift, and go to state 24
    NOTEQUAL  shift, and go to state 25
    MEQUAL    shift, and go to state 26
    GEQUAL    shift, and go to state 27
    '+'       shift, and go to state 28
    '-'       shift, and go to state 29
    '*'       shift, and go to state 30
    '/'       shift, and go to state 31
    '%'       shift, and go to state 32
    '\n'      shift, and go to state 33
    '<'       shift, and go to state 34
    '>'       shift, and go to state 35


State 13

    6 line: LETTER '=' . expr '\n'

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 36


State 14

   27 expr: LETTER .

    $default  reduce using rule 27 (expr)


State 15

   10 line: IF bexpr . $@1 THEN expr ELSE $@2 expr '\n'

    $default  reduce using rule 8 ($@1)

    $@1  go to state 37


State 16

   11 bexpr: expr . MEQUAL expr
   12      | expr . GEQUAL expr
   13      | expr . '<' expr
   14      | expr . '>' expr
   15      | expr . EQUAL expr
   16      | expr . NOTEQUAL expr
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    EQUAL     shift, and go to state 24
    NOTEQUAL  shift, and go to state 25
    MEQUAL    shift, and go to state 26
    GEQUAL    shift, and go to state 27
    '+'       shift, and go to state 28
    '-'       shift, and go to state 29
    '*'       shift, and go to state 30
    '/'       shift, and go to state 31
    '%'       shift, and go to state 32
    '<'       shift, and go to state 34
    '>'       shift, and go to state 35


State 17

   25 expr: '(' . expr ')'

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 38


State 18

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   24     | '-' expr .

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 24 (expr)


State 19

   17 bexpr: '(' bexpr . ')'

    ')'  shift, and go to state 39


State 20

   11 bexpr: expr . MEQUAL expr
   12      | expr . GEQUAL expr
   13      | expr . '<' expr
   14      | expr . '>' expr
   15      | expr . EQUAL expr
   16      | expr . NOTEQUAL expr
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   25     | '(' expr . ')'

    EQUAL     shift, and go to state 24
    NOTEQUAL  shift, and go to state 25
    MEQUAL    shift, and go to state 26
    GEQUAL    shift, and go to state 27
    '+'       shift, and go to state 28
    '-'       shift, and go to state 29
    '*'       shift, and go to state 30
    '/'       shift, and go to state 31
    '%'       shift, and go to state 32
    ')'       shift, and go to state 40
    '<'       shift, and go to state 34
    '>'       shift, and go to state 35


State 21

    0 $accept: lines $end .

    $default  accept


State 22

    1 lines: lines line .

    $default  reduce using rule 1 (lines)


State 23

    7 line: bexpr '\n' .

    $default  reduce using rule 7 (line)


State 24

   15 bexpr: expr EQUAL . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 41


State 25

   16 bexpr: expr NOTEQUAL . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 42


State 26

   11 bexpr: expr MEQUAL . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 43


State 27

   12 bexpr: expr GEQUAL . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 44


State 28

   19 expr: expr '+' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 45


State 29

   20 expr: expr '-' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 46


State 30

   21 expr: expr '*' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 47


State 31

   22 expr: expr '/' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 48


State 32

   23 expr: expr '%' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 49


State 33

    5 line: expr '\n' .

    $default  reduce using rule 5 (line)


State 34

   13 bexpr: expr '<' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 50


State 35

   14 bexpr: expr '>' . expr

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 51


State 36

    6 line: LETTER '=' expr . '\n'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'   shift, and go to state 28
    '-'   shift, and go to state 29
    '*'   shift, and go to state 30
    '/'   shift, and go to state 31
    '%'   shift, and go to state 32
    '\n'  shift, and go to state 52


State 37

   10 line: IF bexpr $@1 . THEN expr ELSE $@2 expr '\n'

    THEN  shift, and go to state 53


State 38

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   25     | '(' expr . ')'

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32
    ')'  shift, and go to state 40


State 39

   17 bexpr: '(' bexpr ')' .

    $default  reduce using rule 17 (bexpr)


State 40

   25 expr: '(' expr ')' .

    $default  reduce using rule 25 (expr)


State 41

   15 bexpr: expr EQUAL expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 15 (bexpr)


State 42

   16 bexpr: expr NOTEQUAL expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 16 (bexpr)


State 43

   11 bexpr: expr MEQUAL expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 11 (bexpr)


State 44

   12 bexpr: expr GEQUAL expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 12 (bexpr)


State 45

   19 expr: expr . '+' expr
   19     | expr '+' expr .
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 19 (expr)


State 46

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   20     | expr '-' expr .
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 20 (expr)


State 47

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   21     | expr '*' expr .
   22     | expr . '/' expr
   23     | expr . '%' expr

    $default  reduce using rule 21 (expr)


State 48

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   22     | expr '/' expr .
   23     | expr . '%' expr

    $default  reduce using rule 22 (expr)


State 49

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr
   23     | expr '%' expr .

    $default  reduce using rule 23 (expr)


State 50

   13 bexpr: expr '<' expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 13 (bexpr)


State 51

   14 bexpr: expr '>' expr .
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 14 (bexpr)


State 52

    6 line: LETTER '=' expr '\n' .

    $default  reduce using rule 6 (line)


State 53

   10 line: IF bexpr $@1 THEN . expr ELSE $@2 expr '\n'

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 54


State 54

   10 line: IF bexpr $@1 THEN expr . ELSE $@2 expr '\n'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    ELSE  shift, and go to state 55
    '+'   shift, and go to state 28
    '-'   shift, and go to state 29
    '*'   shift, and go to state 30
    '/'   shift, and go to state 31
    '%'   shift, and go to state 32


State 55

   10 line: IF bexpr $@1 THEN expr ELSE . $@2 expr '\n'

    $default  reduce using rule 9 ($@2)

    $@2  go to state 56


State 56

   10 line: IF bexpr $@1 THEN expr ELSE $@2 . expr '\n'

    INTEGER  shift, and go to state 1
    LETTER   shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 17

    expr  go to state 57


State 57

   10 line: IF bexpr $@1 THEN expr ELSE $@2 expr . '\n'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '%' expr

    '+'   shift, and go to state 28
    '-'   shift, and go to state 29
    '*'   shift, and go to state 30
    '/'   shift, and go to state 31
    '%'   shift, and go to state 32
    '\n'  shift, and go to state 58


State 58

   10 line: IF bexpr $@1 THEN expr ELSE $@2 expr '\n' .

    $default  reduce using rule 10 (line)
